--- a/src/language-site/src/app/login/login.component.html
+++ b/src/language-site/src/app/login/login.component.html
@@ -4,19 +4,19 @@
         <form [formGroup]="form" (ngSubmit)="login()">
             <div class="form-group">
                 <label for="username">Usuario</label>
-                <input type="text" formControlName="user" class="form-control"/>   
+                <input type="text" formControlName="user" class="form-control" />
             </div>
             <div class="form-group">
                 <label for="password">Contrasena</label>
                 <input type="password" formControlName="password" class="form-control" />
-               
+
             </div>
             <div class="form-group">
                 <button class="btn btn-primary">
                     Iniciar Sesion
                 </button>
             </div>
-            <a routerLink="/register2" class="btn btn-link">Registrarse</a>
+            <a routerLink="/register" class="btn btn-link">Registrarse</a>
         </form>
     </div>
 </div>
