Estilo básico y mensajes de error en login

--- a/src/language-site/src/app/Extra/navigation/navigation.component.html
+++ b/src/language-site/src/app/Extra/navigation/navigation.component.html
@@ -1,4 +1,4 @@
 <nav class="navbar navbar-expand-lg navbar-dark bike-nav">
-    <a class="navbar-brand">Sitio de Lenguajes</a>
+    <a class="navbar-brand">Intercambio de lenguajes</a>
 </nav>
 <div class="line"></div>
