--- a/src/language-site/src/app/Administration/reports/reports.component.html
+++ b/src/language-site/src/app/Administration/reports/reports.component.html
@@ -1,3 +1,4 @@
+<app-navigation></app-navigation>
 <div class=" d-flex justify-content-center">
     <aside class="col-lg" style="margin: 5% 5% 5% 5%;">
         <div class="card">
