--- a/src/language-site/src/app/Panel/person-teach-desired-age/person-teach-desired-age.component.html
+++ b/src/language-site/src/app/Panel/person-teach-desired-age/person-teach-desired-age.component.html
@@ -1,4 +1,4 @@
-<article class="card-body" style="min-height: 475px;">
+<article class="tab-body" style="min-height: 475px;">
     <div class="row">
         <div class="col-lg-12">
             <form [formGroup]="form" (ngSubmit)="getUsers()">
