--- a/src/language-site/src/app/Panel/person-teach-desired/person-teach-desired.component.html
+++ b/src/language-site/src/app/Panel/person-teach-desired/person-teach-desired.component.html
@@ -1,8 +1,8 @@
-<article class="card-body" style="min-height: 475px;">
+<article class="tab-body" style="min-height: 475px;">
     
     <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
             <div class="table-responsive">
                 <div class=table-wrapper>
                     <table class="table table-hover bike-table">
@@ -10,14 +10,14 @@
                             <tr class="d-flex">   
                                 <th class="col-3">Nombre</th>
                                 <th class="col-3">Apellido</th>
-                                <th class="col-3">Lenguaje deseado</th>
+                                <th class="col-6">Lenguaje deseado</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr class="d-flex" *ngFor="let report of users"> 
                                 <td class="col-3">{{report.name}}</td>
                                 <td class="col-3">{{report.lastname1}}</td>   
-                                <td class="col-3">
+                                <td class="col-6">
                                     <p *ngFor="let line of report.lang_desired">{{line.name}}</p>
                                 </td>                            
                             </tr>
@@ -26,6 +26,6 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg 3"></div>
+        <div class="col-lg 2"></div>
     </div>
 </article>
