--- a/src/language-site/src/app/login/login.component.html
+++ b/src/language-site/src/app/login/login.component.html
@@ -1,22 +1,27 @@
-﻿<div class="card">
-    <h4 class="card-header">Login</h4>
-    <div class="card-body">
-        <form [formGroup]="form" (ngSubmit)="login()">
-            <div class="form-group">
-                <label for="username">Usuario</label>
-                <input type="text" formControlName="user" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label for="password">Contrasena</label>
-                <input type="password" formControlName="password" class="form-control" />
+﻿
+<div class=" d-flex justify-content-center">
+    <aside class="col-lg" style="margin: 5% 25% 5% 25%;">
+        <div class="card">
+            <h4 class="card-header">Login</h4>
+            <div class="card-body">
+                <form [formGroup]="form" (ngSubmit)="login()">
+                    <div class="form-group">
+                        <label for="username">Usuario</label>
+                        <input type="text" formControlName="user" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Contrasena</label>
+                        <input type="password" formControlName="password" class="form-control" />
 
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary">
+                            Iniciar Sesion
+                        </button>
+                    </div>
+                    <a routerLink="/register" class="btn btn-link">Registrarse</a>
+                </form>
             </div>
-            <div class="form-group">
-                <button class="btn btn-primary">
-                    Iniciar Sesion
-                </button>
-            </div>
-            <a routerLink="/register" class="btn btn-link">Registrarse</a>
-        </form>
-    </div>
+        </div>
+    </aside>
 </div>
