--- a/src/language-site/src/app/register/register.component.html
+++ b/src/language-site/src/app/register/register.component.html
@@ -112,7 +112,7 @@
                 <button class="btn btn-primary">
                     Registrarse
                 </button>
-                <a routerLink="/login2" class="btn btn-link">Cancelar</a>
+                <a routerLink="/login" class="btn btn-link">Cancelar</a>
             </div>
         </form>
     </div>
