--- a/src/language-site/src/app/Panel/person-teach-desired-age/person-teach-desired-age.component.html
+++ b/src/language-site/src/app/Panel/person-teach-desired-age/person-teach-desired-age.component.html
@@ -4,69 +4,72 @@
             <form [formGroup]="form" (ngSubmit)="getUsers()">
                 <div class="form-group">
                     <div class="form-row">
-                        <div class="col-lg-2" style="text-align: center;">
-                            <label>Paises: </label>
-                        </div>
-                        <div formArrayName="countries">
-                            <div *ngFor="let subtask of subtaskControl().controls; let i=index">
-                                <div [formGroupName]="i">
-                                    <select formControlName="name">
-                                        <option *ngFor="let r of countries" [value]="r.name">
-                                                     {{r.name}}
-                                        </option>
-                                     </select>
-                                     <div>
-                                        <a class="btn  btn-sm" (click)="addLink()">Add</a>
-                                        <a class="btn  btn-sm" (click)="removeLink(i)">REMOVE</a>
+                        <div class="col-lg-12">
+                            <div class="form-row">
+                                <div class="col-lg-6" formArrayName="countries">
+                                    <label>Paises: </label>
+                                    <div *ngFor="let subtask of subtaskControl().controls; let i=index">
+                                        <div [formGroupName]="i">
+                                            <select formControlName="name" class="form-control"  >
+                                                <option  *ngFor="let r of countries" [value]="r.name">
+                                                    {{r.name}}
+                                                </option>
+                                            </select>
+                                            <div>
+                                                <a class="btn  btn-sm" (click)="addLink()">Add</a>
+                                                <a class="btn  btn-sm" (click)="removeLink(i)">REMOVE</a>
+                                            </div>
+                                        </div>
                                     </div>
-                                     </div>
                                 </div>
-                              
+                                <div class="col-lg-2" >
+                                    <label for="password">Edad minima</label>
+                                    <input type="text" formControlName="ageMin" class="form-control" />
+                                </div>
+                                <div class="col-lg-2" >
+                                    <label for="password">Edad máxima</label>
+                                    <input type="text" formControlName="ageMax" class="form-control" />
+                                </div>
+                                <div class="col-lg-2">
+                                    <label style="color: transparent;">Txt</label>
+                                    <button class="btn btn-primary btn-block">Aceptar</button>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label for="password">Edad minima</label>
-                                <input type="text" formControlName="ageMin" class="form-control"/>
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Edad Maxima</label>
-                                <input type="text" formControlName="ageMax" class="form-control"/>
-                            </div>
-                        </div>
-                        <div class="col-lg-2">
-                            <button class="btn btn-primary btn-block">Aceptar</button>
                         </div>
                     </div>
-                
+                </div>
+
             </form>
         </div>
     </div>
-    <br/>
+    <br />
     <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
             <div class="table-responsive">
                 <div class=table-wrapper>
                     <table class="table table-hover bike-table">
                         <thead>
-                            <tr class="d-flex">   
+                            <tr class="d-flex">
                                 <th class="col-3">Nombre</th>
                                 <th class="col-3">Apellido</th>
-                                <th class="col-3">Lenguaje deseado</th>
+                                <th class="col-6">Lenguaje deseado</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="d-flex" *ngFor="let report of users"> 
+                            <tr><td *ngIf="users.length == 0">No hay usuarios</td></tr>
+                            <tr class="d-flex" *ngFor="let report of users">
                                 <td class="col-3">{{report.name}}</td>
-                                <td class="col-3">{{report.lastname1}}</td>   
-                                <td class="col-3">
+                                <td class="col-3">{{report.lastname1}}</td>
+                                <td class="col-6">
                                     <p *ngFor="let line of report.lang_desired">{{line.name}}</p>
-                                </td>                            
+                                </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
-        <div class="col-lg 3"></div>
+        <div class="col-lg-2"></div>
     </div>
 </article>
