--- a/src/language-site/src/app/Panel/hobby-config/hobby-config.component.html
+++ b/src/language-site/src/app/Panel/hobby-config/hobby-config.component.html
@@ -2,64 +2,46 @@
     <div class="row">
         <div class="col-lg-12">
             <form [formGroup]="form" (ngSubmit)="addHobby()">
-                <div class="form-group">    
-                   
-                        <label for="firstName">Nombre</label>
-                        <input type="text" formControlName="name" class="form-control" />
-                    
-                    <div class="col-lg-2">
-                        <button class="btn btn-primary btn-block">Añadir</button>
-                    </div>
-                            
+                <div class="form-group">
+                    <div class="form-row">
+                        <label class="col-lg-2" for="firstName">Nombre</label>
+                        <div class="col-lg-6">
+                            <input type="text" formControlName="name" class="form-control" />
                         </div>
-
+                        <div class="col-lg-4">
+                            <button class="btn btn-primary btn-block">Añadir</button>
+                        </div>
+                    </div>
+                </div>
             </form>
         </div>
-
-        <div class="col-lg-12">
-            <form [formGroup]="formd" (ngSubmit)="deleteHobby()">
-                <div class="form-group">    
-                   
-                        <label for="firstName">Nombre</label>
-                        <div>
-                            <select formControlName="name">
-                                <option *ngFor="let r of user.hobbies" [value]="r.name">
-                                             {{r.name}}
-                                </option>
-                             </select>
-                        </div>
-
-                    <div class="col-lg-2">
-                        <button class="btn btn-primary btn-block">Borrar</button>
-                    </div>
-                            
-                        </div>
-
-            </form>
-        </div>
-        
     </div>
-    <br/>
+    <br />
     <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
             <div class="table-responsive">
                 <div class=table-wrapper>
                     <table class="table table-hover bike-table">
                         <thead>
-                            <tr class="d-flex">   
-                                <th class="col-3">Hobby</th>
+                            <tr class="d-flex">
+                                <th class="col-8">Hobby</th>
+                                <th class="col-2"></th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="d-flex" *ngFor="let report of user.hobbies"> 
-                                <td class="col-3">{{report.name}}</td>                             
+                            <tr class="d-flex" *ngFor="let report of user.hobbies">
+                                <td class="col-8">{{report.name}}</td>
+                                <td class="col-4">
+                                    <button class="btn btn-primary btn-block"
+                                        (click)="deleteHobbyByTable(report.name)">Borrar</button>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
-        <div class="col-lg 3"></div>
+        <div class="col-lg-2"></div>
     </div>
 </article>
