--- a/src/language-site/src/app/login/login.component.html
+++ b/src/language-site/src/app/login/login.component.html
@@ -1,8 +1,9 @@
 ﻿
-<div class=" d-flex justify-content-center">
-    <aside class="col-lg" style="margin: 5% 25% 5% 25%;">
+<div class="d-flex justify-content-center">
+    <aside class="col-lg" style="margin: 10% 30% 5% 30%;">
         <div class="card">
-            <h4 class="card-header">Login</h4>
+            <h4 class="card-header login">Login</h4>
+            <div class="line"></div>
             <div class="card-body">
                 <form [formGroup]="form" (ngSubmit)="login()">
                     <div class="form-group">
@@ -15,11 +16,11 @@
 
                     </div>
                     <div class="form-group">
-                        <button class="btn btn-primary">
+                        <button class="btn btn-primary btn-block">
                             Iniciar Sesion
                         </button>
                     </div>
-                    <a routerLink="/register" class="btn btn-link">Registrarse</a>
+                    <a routerLink="/register" class="btn btn-link btn-block">Registrarse</a>
                 </form>
             </div>
         </div>
