--- a/src/language-site/src/app/Panel/contact-config/contact-config.component.html
+++ b/src/language-site/src/app/Panel/contact-config/contact-config.component.html
@@ -2,6 +2,21 @@
     <div class="row">
         <div class="col-lg-12">
             <form [formGroup]="form" (ngSubmit)="addContact()">
+
+                <label for="password">Contacto</label>
+                <div>
+                    <select formControlName="name" class="form-control">
+                        <option *ngFor="let r of contacts" [value]="r">
+                            {{r}}
+                        </option>
+                    </select>
+                </div>
+                <div>
+                    <input type="text" formControlName="value" class="form-control" />
+                </div>
+                <button class="btn btn-primary btn-block">Añadir</button>
+
+                <!-- 
                 <div class="form-group">
                     <div class="form-row">
                         <label class="col-lg-2" for="firstName">Nombre</label>
@@ -12,7 +27,7 @@
                             <button class="btn btn-primary btn-block">Añadir</button>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </form>
         </div>
     </div>
